# educational-practice

./: CMakeLists.txt  ConsoleApplication1  ConsoleApplication1.cpp  ConsoleApplication1.sln  Demodulator.h  Downsample.h  Filter.cpp  Normalize.cpp  Normalize.h  README.md  WavWriter.cpp  complex.h  test_demodulatorAM.cpp  test_downsample.cpp  test_filemanager.cpp  test_filter.cpp  test_normalize.cpp  untitled3.m
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  DemodulatorAM.cpp  DemodulatorAM.h  DemodulatorFM.cpp  DemodulatorFM.h  Downsample.cpp  FileManager.cpp  FileManager.h  Filter.h  WavWriter.h  untitled2.m
ConsoleApplication1/Tests/: CMakeLists.txt  Tests.cpp  test_demodulatorAM.cpp  test_demodulatorFM.cpp  test_downsample.cpp  test_filemanager.cpp  test_filter.cpp  test_normalize.cpp
